feature: 메모 기본 기능 구현

--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
 		"create-migration": "bun run create-migration.ts"
 	},
 	"dependencies": {
-		"@ga-ut/store": "^1.1.1",
-		"bun-plugin-tailwind": "latest",
-		"eslint-plugin-react-hooks": "^0.0.0-experimental-d92056ef-20250627",
-		"react": "^0.0.0-experimental-d92056ef-20250627",
-		"react-dom": "^0.0.0-experimental-d92056ef-20250627",
-		"tailwindcss": "^4"
+		"@ga-ut/fetcher": "^0.1.1",
+		"@ga-ut/store": "^1.1.4",
+		"clsx": "^2.1.1",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"tailwind-merge": "^3.3.1",
+		"tailwindcss": "^4.1.11"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.0.6",
 		"@types/bun": "latest",
-		"@types/react": "^19",
-		"@types/react-dom": "^19"
+		"@types/react": "^19.1.8",
+		"@types/react-dom": "^19.1.6",
+		"bun-plugin-tailwind": "latest"
 	}
 }
