--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
 	"version": "0.1.0",
 	"private": true,
 	"type": "module",
-	"main": "src/server.tsx",
-	"module": "src/server.tsx",
+	"main": "src/server/index.ts",
+	"module": "src/server/index.ts",
 	"scripts": {
-		"dev": "bun --hot src/server.tsx",
-		"build": "bun build ./src/assets/index.html --outdir=dist --sourcemap --target=browser --minify --define:process.env.NODE_ENV='\"production\"' --env='BUN_PUBLIC_*'",
-		"start": "NODE_ENV=production bun src/server.tsx",
-		"migrate": "bun run migrate.ts",
-		"create-migration": "bun run create-migration.ts"
+		"dev": "bun --hot src/server/index.ts",
+		"build": "bun build ./src/client/main.tsx --outdir=dist --sourcemap --target=browser --minify --define:process.env.NODE_ENV='\"production\"' --env='BUN_PUBLIC_*'",
+		"start": "NODE_ENV=production bun src/server/index.ts",
+		"migrate": "bun run scripts/migrate.ts",
+		"create-migration": "bun run scripts/create-migration.ts"
 	},
 	"dependencies": {
 		"@ga-ut/fetcher": "^0.1.1",
